<resources>
    <string name="app_name">JMP - Survei Hak Pilih KPU</string>
    <string name="title">Survei Pencocokan dan Penelitian Data Pemilih</string>
    <string name="contentDescription">Logo Komisi Pemilihan Umum</string>
    <string name="komisi_pemilihan_umum_pusat">Komisi Pemilihan Umum Pusat</string>
    <string name="lihat_data_pemilih">Lihat Data Pemilih</string>
    <string name="tambahkan_data_pemilih">Tambahkan Data Pemilih</string>
    <string name="copyright">© Fadhil Prawira - 2024\nSertifikasi BNSP - Junior Mobile Programmer</string>
    <string name="keluar_aplikasi">Keluar aplikasi</string>
    <string name="informasi_tentang_aplikasi_ini">Informasi tentang aplikasi ini</string>
    <string name="cek_lokasi">Cek Lokasi</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="nama">Nama</string>
    <string name="no_hp">No. HP</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal">Tanggal</string>
    <string name="alamat">Alamat</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="simpan">Simpan Data Pemilih</string>
    <string name="voters_name">Nama Pemilih</string>
    <string name="nik">NIK Pemilih</string>
    <string name="tanggal_input">2024-09-13</string>
</resources>